# santa-workshop-tour-2019

./: README.md  main.py  pyproject.toml
santa_workshop_tour_2019/: __init__.py  const.py  cost.py  greedy.py  io.py  lap.py  lp_mip.py  mip.py  optim.py  util.py
scripts/: lp.py  lp2.py  main.ipynb  main.py  setup_dataset.sh
