[tool.poetry]
name = "santa-workshop-tour-2019"
version = "0.1.0"
description = "sant workshop tour 2019"
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.25.3"

[tool.poetry.dev-dependencies]
python-language-server = "^0.31.1"
pyls-black = "^0.4.4"
pyls-isort = "^0.1.1"
pyls-mypy = "^0.1.8"
kkt = {git = "git@github.com:ar90n/kkt.git"}

[tool.kkt.meta_data]
slug = "santa-2019"
code_file = "main.py"
kernel_type = "script"
is_private = true
enable_gpu = false
enable_internet = true
competition_sources = ["santa-workshop-tour-2019"]

[tool.kkt]
enable_git_tag = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

