[tool.poetry]
name = "santa-workshop-tour-2019"
version = "0.1.0"
description = "sant workshop tour 2019"
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.25.0"
numba = "^0.46.0"
lap = "^0.4.0"
ortools = "^7.4"

[tool.poetry.dev-dependencies]
python-language-server = "^0.31.1"
pyls-black = "^0.4.4"
pyls-mypy = "^0.1.8"
pre-commit = "^1.20"
jupyter = "^1.0"
streamlit = "^0.51.0"
matplotlib = "^3.1"

[tool.kkt.meta_data]
slug = "santa-2019"
code_file = "./scripts/main.py"
kernel_type = "script"
is_private = true
enable_gpu = false
enable_internet = true
dataset_sources = ["ar90ngas/santa2019work"]
competition_sources = ["santa-workshop-tour-2019"]

[tool.kkt]
enable_git_tag = true

[tool.black]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
